[gd_scene load_steps=44 format=4 uid="uid://dip24s5sn126d"]

[ext_resource type="Script" uid="uid://bq6yhha3dwffh" path="res://scripts/level_manager.gd" id="1_34hum"]
[ext_resource type="Texture2D" uid="uid://dcj7uoevm0g74" path="res://sprites/starfield.png" id="2_vhkxn"]
[ext_resource type="Script" uid="uid://cvhqfqafns1lm" path="res://scripts/map_manager.gd" id="3_1q7iv"]
[ext_resource type="Script" uid="uid://bmwrvkcicv7j4" path="res://scripts/dialog_manager.gd" id="3_ypncs"]
[ext_resource type="Texture2D" uid="uid://fphgmeutoy78" path="res://sprites/cube_panel.png" id="4_0qejo"]
[ext_resource type="Script" uid="uid://kq62wxarnwli" path="res://scripts/map_block.gd" id="4_gj3kh"]
[ext_resource type="FontFile" uid="uid://46uhdyfx21cf" path="res://fonts/PixeloidMono.ttf" id="5_erlbe"]
[ext_resource type="TileSet" uid="uid://ot12yrgktr4i" path="res://tilesets/two_color_space_tileset.tres" id="5_myogd"]
[ext_resource type="TileSet" uid="uid://bjm8dm4q83nd8" path="res://tilesets/nodes_and_wires.tres" id="6_s4l03"]
[ext_resource type="Texture2D" uid="uid://ct2vpqfoq64pl" path="res://sprites/enter_symbol.png" id="6_xpoxe"]
[ext_resource type="Script" uid="uid://dn8cbrj8l1tmr" path="res://scripts/continue_prompt.gd" id="7_vni6s"]
[ext_resource type="Script" uid="uid://cyg4kuvi2nlhe" path="res://scripts/nodes_and_wires.gd" id="7_ypncs"]
[ext_resource type="Texture2D" uid="uid://b8f2imer78pxy" path="res://sprites/tutorial_diagram.png" id="9_3eiyy"]
[ext_resource type="Texture2D" uid="uid://dlaxtp73dj4ni" path="res://tilesets/sources/robot_idle.png" id="9_erlbe"]
[ext_resource type="Texture2D" uid="uid://3qe6bp485cqc" path="res://sprites/controls_sprites.png" id="10_0qejo"]
[ext_resource type="Texture2D" uid="uid://dd6qhxcxdtq1i" path="res://sprites/level_0_shape.png" id="11_erlbe"]
[ext_resource type="Script" uid="uid://bb4fj5w22erkd" path="res://scripts/pause_screen.gd" id="12_4mw86"]
[ext_resource type="Texture2D" uid="uid://c1ukjcr3bj6jm" path="res://sprites/exit_button_normal.png" id="13_ubciw"]
[ext_resource type="Texture2D" uid="uid://cj7p6vyl1h777" path="res://sprites/exit_button_pressed.png" id="14_mswog"]
[ext_resource type="Texture2D" uid="uid://cvwakegfxvod6" path="res://sprites/exit_button_hovered.png" id="15_eh6x6"]
[ext_resource type="Script" uid="uid://bc47owkdqsdbp" path="res://scripts/win_dialog.gd" id="16_sagaa"]
[ext_resource type="Script" uid="uid://c5d8kwm3hv3di" path="res://scripts/node_score_label.gd" id="17_qf67e"]
[ext_resource type="PackedScene" uid="uid://cgddg61hgp4ss" path="res://scenes/subscenes/map_edge_display.tscn" id="23_mswog"]
[ext_resource type="PackedScene" uid="uid://b0f6vky70y4h0" path="res://scenes/subscenes/player.tscn" id="24_4mw86"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rdr40"]
texture = ExtResource("4_0qejo")
texture_margin_left = 13.0
texture_margin_top = 13.0
texture_margin_right = 13.0
texture_margin_bottom = 13.0

[sub_resource type="AtlasTexture" id="AtlasTexture_o30b1"]
atlas = ExtResource("9_erlbe")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ka6nf"]
atlas = ExtResource("9_erlbe")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ws7p0"]
atlas = ExtResource("9_erlbe")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbuqv"]
atlas = ExtResource("9_erlbe")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kl1bc"]
atlas = ExtResource("9_erlbe")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvjnh"]
atlas = ExtResource("9_erlbe")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_abh1i"]
atlas = ExtResource("9_erlbe")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pab1"]
atlas = ExtResource("9_erlbe")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6o5e3"]
atlas = ExtResource("9_erlbe")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_q5jtg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o30b1")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_ka6nf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ws7p0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbuqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kl1bc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvjnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abh1i")
}, {
"duration": 5.1,
"texture": SubResource("AtlasTexture_5pab1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbuqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6o5e3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q5jtg"]
texture = ExtResource("4_0qejo")
texture_margin_left = 13.0
texture_margin_top = 13.0
texture_margin_right = 13.0
texture_margin_bottom = 13.0

[sub_resource type="SpriteFrames" id="SpriteFrames_ujhos"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o30b1")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_ka6nf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ws7p0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbuqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kl1bc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvjnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abh1i")
}, {
"duration": 5.1,
"texture": SubResource("AtlasTexture_5pab1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbuqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6o5e3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_487ge"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d0iqq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3dafp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5adam"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2e8ei"]
texture = ExtResource("4_0qejo")
texture_margin_left = 13.0
texture_margin_top = 13.0
texture_margin_right = 13.0
texture_margin_bottom = 13.0

[sub_resource type="SpriteFrames" id="SpriteFrames_a67nr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o30b1")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_ka6nf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ws7p0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbuqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kl1bc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvjnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abh1i")
}, {
"duration": 5.1,
"texture": SubResource("AtlasTexture_5pab1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbuqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6o5e3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="LevelManager" type="Node2D"]
script = ExtResource("1_34hum")
current_scene_name = "levels/level_0"
next_scene_name = "levels/level_1"

[node name="BackgroundCanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="BackgroundCanvasLayer"]
z_index = 1
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vhkxn")
stretch_mode = 1

[node name="DialogCanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("3_ypncs")

[node name="DialogBox" type="Control" parent="DialogCanvasLayer"]
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -216.0
offset_right = -24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="DialogCanvasLayer/DialogBox"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_rdr40")

[node name="RichTextLabel" type="RichTextLabel" parent="DialogCanvasLayer/DialogBox/PanelContainer"]
visible = false
texture_filter = 1
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("5_erlbe")
theme_override_font_sizes/normal_font_size = 20
text = "Cube Trotter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinuePrompt" type="TextureRect" parent="DialogCanvasLayer/DialogBox"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -73.0
offset_top = -40.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("6_xpoxe")
expand_mode = 1
script = ExtResource("7_vni6s")

[node name="PlayerAvatarAnimation" type="AnimatedSprite2D" parent="DialogCanvasLayer/DialogBox"]
texture_filter = 1
position = Vector2(32, 208)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_q5jtg")
autoplay = "default"

[node name="TextureRect" type="TextureRect" parent="DialogCanvasLayer/DialogBox"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -176.0
offset_top = 8.0
offset_right = 173.0
offset_bottom = 120.0
grow_horizontal = 2
texture = ExtResource("9_3eiyy")

[node name="TextureRect2" type="TextureRect" parent="DialogCanvasLayer/DialogBox"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -96.0
offset_right = 97.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("10_0qejo")

[node name="DialogBox2" type="Control" parent="DialogCanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -216.0
offset_right = -24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="DialogCanvasLayer/DialogBox2"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_q5jtg")

[node name="RichTextLabel" type="RichTextLabel" parent="DialogCanvasLayer/DialogBox2/PanelContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("5_erlbe")
theme_override_font_sizes/normal_font_size = 20
text = "LEVEL 0:
SHEET OF PAPER




"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinuePrompt" type="TextureRect" parent="DialogCanvasLayer/DialogBox2"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -73.0
offset_top = -40.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("6_xpoxe")
expand_mode = 1
script = ExtResource("7_vni6s")

[node name="PlayerAvatarAnimation" type="AnimatedSprite2D" parent="DialogCanvasLayer/DialogBox2"]
texture_filter = 1
position = Vector2(32, 208)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_ujhos")
autoplay = "default"

[node name="TextureRect" type="TextureRect" parent="DialogCanvasLayer/DialogBox2"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -128.0
offset_right = 68.0
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("11_erlbe")

[node name="MiscCanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="MiscCanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseScreen" type="Panel" parent="MiscCanvasLayer/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("12_4mw86")

[node name="RichTextLabel" type="RichTextLabel" parent="MiscCanvasLayer/Control/PauseScreen"]
texture_filter = 1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 62.0
offset_bottom = 122.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("5_erlbe")
theme_override_font_sizes/normal_font_size = 20
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MiscCanvasLayer/Control/PauseScreen"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ContinueButton" type="Button" parent="MiscCanvasLayer/Control/PauseScreen/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.101961, 0.92549, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.60933, 0.60933, 0.60933, 1)
theme_override_fonts/font = ExtResource("5_erlbe")
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_487ge")
theme_override_styles/hover = SubResource("StyleBoxEmpty_d0iqq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3dafp")
theme_override_styles/normal = SubResource("StyleBoxEmpty_5adam")
text = "CONTINUE"

[node name="RestartButton" type="Button" parent="MiscCanvasLayer/Control/PauseScreen/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.101961, 0.92549, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.60933, 0.60933, 0.60933, 1)
theme_override_fonts/font = ExtResource("5_erlbe")
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_487ge")
theme_override_styles/hover = SubResource("StyleBoxEmpty_d0iqq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3dafp")
theme_override_styles/normal = SubResource("StyleBoxEmpty_5adam")
text = "RESTART LEVEL"

[node name="ExitButton" type="Button" parent="MiscCanvasLayer/Control/PauseScreen/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.101961, 0.92549, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.60933, 0.60933, 0.60933, 1)
theme_override_fonts/font = ExtResource("5_erlbe")
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_487ge")
theme_override_styles/hover = SubResource("StyleBoxEmpty_d0iqq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3dafp")
theme_override_styles/normal = SubResource("StyleBoxEmpty_5adam")
text = "RETURN TO MENU"

[node name="TextureRect" type="TextureRect" parent="MiscCanvasLayer/Control/PauseScreen"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -152.0
offset_right = 97.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("10_0qejo")

[node name="PauseButton" type="TextureButton" parent="MiscCanvasLayer/Control"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -42.0
offset_right = 40.0
offset_bottom = -4.0
grow_vertical = 0
focus_mode = 0
texture_normal = ExtResource("13_ubciw")
texture_pressed = ExtResource("14_mswog")
texture_hover = ExtResource("15_eh6x6")
texture_disabled = ExtResource("14_mswog")

[node name="WinDialog" type="Control" parent="MiscCanvasLayer/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -216.0
offset_right = -24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("16_sagaa")

[node name="PanelContainer" type="PanelContainer" parent="MiscCanvasLayer/Control/WinDialog"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_2e8ei")

[node name="RichTextLabel" type="RichTextLabel" parent="MiscCanvasLayer/Control/WinDialog/PanelContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("5_erlbe")
theme_override_font_sizes/normal_font_size = 20
text = "LEVEL COMPLETE!




"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinuePrompt" type="TextureRect" parent="MiscCanvasLayer/Control/WinDialog"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -73.0
offset_top = -40.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("6_xpoxe")
expand_mode = 1
script = ExtResource("7_vni6s")

[node name="PlayerAvatarAnimation" type="AnimatedSprite2D" parent="MiscCanvasLayer/Control/WinDialog"]
texture_filter = 1
position = Vector2(32, 208)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_a67nr")
autoplay = "default"
frame_progress = 0.104828

[node name="NodeScoreLabel" type="RichTextLabel" parent="MiscCanvasLayer/Control"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -97.0
offset_top = -38.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("5_erlbe")
theme_override_font_sizes/normal_font_size = 26
text = "0/4"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("17_qf67e")

[node name="MapManager" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(1, 1)
script = ExtResource("3_1q7iv")
starting_player_position = Vector2i(1, 6)
metadata/_custom_type_script = "uid://cvhqfqafns1lm"

[node name="FrontBlock" type="Node2D" parent="MapManager" node_paths=PackedStringArray("neighbor_up", "neighbor_down", "neighbor_left", "neighbor_right")]
position = Vector2(664, -57)
script = ExtResource("4_gj3kh")
neighbor_up = NodePath("../BackBlock")
neighbor_down = NodePath("../BackBlock")
neighbor_left = NodePath("../BackBlock")
neighbor_right = NodePath("../BackBlock")
edge_types = Dictionary[int, int]({
0: 1,
1: 1,
2: 1,
3: 1
})
approach_dirs = Dictionary[int, int]({
0: 1,
1: 0,
2: 2,
3: 3
})
neighbor_offsets = Dictionary[int, int]({
0: 0,
1: 0,
2: 0,
3: 0
})
metadata/_custom_type_script = "uid://kq62wxarnwli"

[node name="Background" type="TileMapLayer" parent="MapManager/FrontBlock"]
texture_filter = 1
tile_map_data = PackedByteArray("AAABAAAABQABAAAAAAABAAEABQAAAAIAAAABAAIABQAAAAIAAAABAAMABQAAAAIAAAABAAQABQAAAAIAAAACAAAABQABAAAAAAACAAEABQAAAAIAAAACAAIABQAAAAIAAAACAAMABQAAAAIAAAACAAQABQAAAAIAAAADAAAABQABAAAAAAADAAEABQAAAAIAAAADAAIABQAAAAIAAAADAAMABQAAAAIAAAADAAQABQAAAAIAAAAEAAAABQABAAAAAAAEAAEABQAAAAIAAAAEAAIABQAAAAIAAAAEAAMABQAAAAIAAAAEAAQABQAAAAIAAAAFAAAABQABAAAAAAAFAAEABQAAAAIAAAAFAAIABQAAAAIAAAAFAAMABQAAAAIAAAAFAAQABQAAAAIAAAABAAUABQAAAAIAAAACAAUABQAAAAIAAAADAAUABQAAAAIAAAAEAAUABQAAAAIAAAAFAAUABQAAAAIAAAABAAYABQAAAAIAAAABAAcABQADAAAAAAACAAYABQAAAAIAAAACAAcABQADAAAAAAADAAYABQAAAAIAAAADAAcABQADAAAAAAAEAAYABQAAAAIAAAAEAAcABQADAAAAAAAFAAYABQAAAAIAAAAFAAcABQADAAAAAAAGAAAABQABAAAAAAAGAAEABQAAAAIAAAAGAAIABQAAAAIAAAAGAAMABQAAAAIAAAAGAAQABQAAAAIAAAAGAAUABQAAAAIAAAAGAAYABQAAAAIAAAAGAAcABQADAAAAAAAHAAAABQAFAAAAAAAHAAEABQACAAAAAAAHAAIABQACAAAAAAAHAAMABQACAAAAAAAHAAQABQACAAAAAAAHAAUABQACAAAAAAAHAAYABQACAAAAAAAHAAcABQAAAAEAAAAAAAcABQABAAEAAAAAAAYABQAAAAAAAAAAAAUABQAAAAAAAAAAAAQABQAAAAAAAAAAAAMABQAAAAAAAAAAAAIABQAAAAAAAAAAAAEABQAAAAAAAAAAAAAABQAEAAAAAAA=")
tile_set = ExtResource("5_myogd")

[node name="Ground" type="TileMapLayer" parent="MapManager/FrontBlock"]
texture_filter = 1
tile_map_data = PackedByteArray("AAABAAQAAAAAAAEAAAAEAAMAAAACAAEAAAABAAEAAAABAAEAAAAEAAQAAAADAAMAAAABAAUAAAAAAAIAAAADAAEAAgACAAMAAAAFAAQAAQADAAEAAAAFAAUAAQAAAAIAAAAEAAUAAQADAAEAAAADAAUAAQAAAAIAAAAAAAAAAAACAAEAAAAGAAcAAQAAAAMAAAAHAAYAAQAAAAMAAAAGAAYAAQAAAAIAAAACAAcAAgACAAMAAAACAAYAAgADAAIAAAACAAUAAgABAAMAAAACAAQAAgAAAAMAAAACAAMAAgACAAIAAAADAAMAAgACAAAAAAAHAAIAAgACAAAAAAAGAAIAAgADAAAAAAAFAAIAAgABAAEAAAAFAAEAAgACAAEAAAAHAAMAAgADAAAAAAAHAAQAAgADAAEAAAAEAAEAAgACAAAAAAACAAEAAgACAAAAAAACAAAAAgABAAMAAAAAAAYAAgABAAMAAAAAAAUAAgABAAMAAAAAAAQAAgABAAMAAAAAAAMAAgABAAMAAAADAAAAAAADAAEAAAAGAAEAAAABAAIAAAAEAAAAAAADAAMAAAAFAAAAAAADAAAAAAAGAAAAAAAAAAEAAAAHAAAAAAADAAIAAAAHAAEAAAACAAAAAAAAAAcAAAACAAIAAAABAAcAAAADAAAAAAABAAYAAAACAAMAAAABAAMAAAAAAAEAAAADAAQAAQABAAMAAAAGAAMAAQACAAMAAAA=")
tile_set = ExtResource("5_myogd")

[node name="NodesAndWires" type="TileMapLayer" parent="MapManager/FrontBlock"]
texture_filter = 1
tile_map_data = PackedByteArray("AAAGAAEAAAAAAAAAAAAFAAYAAAAAAAAAAAA=")
tile_set = ExtResource("6_s4l03")
script = ExtResource("7_ypncs")
metadata/_custom_type_script = "uid://cyg4kuvi2nlhe"

[node name="BackBlock" type="Node2D" parent="MapManager" node_paths=PackedStringArray("neighbor_up", "neighbor_down", "neighbor_left", "neighbor_right")]
position = Vector2(663, 78)
script = ExtResource("4_gj3kh")
neighbor_up = NodePath("../FrontBlock")
neighbor_down = NodePath("../FrontBlock")
neighbor_left = NodePath("../FrontBlock")
neighbor_right = NodePath("../FrontBlock")
edge_types = Dictionary[int, int]({
0: 1,
1: 1,
2: 1,
3: 1
})
approach_dirs = Dictionary[int, int]({
0: 1,
1: 0,
2: 2,
3: 3
})
neighbor_offsets = Dictionary[int, int]({
0: 0,
1: 0,
2: 0,
3: 0
})
metadata/_custom_type_script = "uid://kq62wxarnwli"

[node name="Background" type="TileMapLayer" parent="MapManager/BackBlock"]
texture_filter = 1
tile_map_data = PackedByteArray("AAABAAAABQABAAAAAAABAAEABQAAAAIAAAABAAIABQAAAAIAAAABAAMABQAAAAIAAAABAAQABQAAAAIAAAACAAAABQABAAAAAAACAAEABQAAAAIAAAACAAIABQAAAAIAAAACAAMABQAAAAIAAAACAAQABQAAAAIAAAADAAAABQABAAAAAAADAAEABQAAAAIAAAADAAIABQAAAAIAAAADAAMABQAAAAIAAAADAAQABQAAAAIAAAAEAAAABQABAAAAAAAEAAEABQAAAAIAAAAEAAIABQAAAAIAAAAEAAMABQAAAAIAAAAEAAQABQAAAAIAAAAFAAAABQABAAAAAAAFAAEABQAAAAIAAAAFAAIABQAAAAIAAAAFAAMABQAAAAIAAAAFAAQABQAAAAIAAAABAAUABQAAAAIAAAACAAUABQAAAAIAAAADAAUABQAAAAIAAAAEAAUABQAAAAIAAAAFAAUABQAAAAIAAAABAAYABQAAAAIAAAABAAcABQADAAAAAAACAAYABQAAAAIAAAACAAcABQADAAAAAAADAAYABQAAAAIAAAADAAcABQADAAAAAAAEAAYABQAAAAIAAAAEAAcABQADAAAAAAAFAAYABQAAAAIAAAAFAAcABQADAAAAAAAGAAAABQABAAAAAAAGAAEABQAAAAIAAAAGAAIABQAAAAIAAAAGAAMABQAAAAIAAAAGAAQABQAAAAIAAAAGAAUABQAAAAIAAAAGAAYABQAAAAIAAAAGAAcABQADAAAAAAAHAAAABQAFAAAAAAAHAAEABQACAAAAAAAHAAIABQACAAAAAAAHAAMABQACAAAAAAAHAAQABQACAAAAAAAHAAUABQACAAAAAAAHAAYABQACAAAAAAAHAAcABQAAAAEAAAAAAAcABQABAAEAAAAAAAYABQAAAAAAAAAAAAUABQAAAAAAAAAAAAQABQAAAAAAAAAAAAMABQAAAAAAAAAAAAIABQAAAAAAAAAAAAEABQAAAAAAAAAAAAAABQAEAAAAAAA=")
tile_set = ExtResource("5_myogd")

[node name="Ground" type="TileMapLayer" parent="MapManager/BackBlock"]
texture_filter = 1
tile_map_data = PackedByteArray("AAAEAAIAAgAAAAEAAAADAAIAAgACAAAAAAACAAIAAgACAAMAAAABAAIAAgAAAAEAAAABAAEAAgAAAAMAAAABAAAAAgACAAEAAAAAAAQAAgAAAAMAAAABAAQAAgADAAIAAAACAAQAAgADAAAAAAADAAQAAgACAAMAAAAAAAYAAQABAAAAAAAGAAYAAQABAAAAAAAFAAEAAQABAAAAAAACAAEAAQACAAMAAAADAAEAAQADAAMAAAAEAAEAAQACAAEAAAACAAAAAAACAAMAAAAAAAUAAQADAAAAAAADAAUAAQADAAIAAAACAAUAAQADAAMAAAABAAUAAQACAAEAAAADAAMAAAABAAEAAAACAAMAAAADAAEAAAAAAAAAAAACAAEAAAAAAAEAAAABAAIAAAAAAAIAAAAAAAAAAAAAAAMAAAADAAEAAAABAAMAAAADAAMAAAAHAAcAAAADAAEAAAAGAAcAAAABAAIAAAAEAAAAAAADAAMAAAADAAAAAAACAAIAAAAFAAMAAQAAAAAAAAAEAAQAAQAAAAIAAAAEAAUAAQABAAAAAAAGAAUAAQAAAAAAAAAHAAIAAQAAAAAAAAACAAcAAQAAAAMAAAA=")
tile_set = ExtResource("5_myogd")

[node name="NodesAndWires" type="TileMapLayer" parent="MapManager/BackBlock"]
texture_filter = 1
tile_map_data = PackedByteArray("AAAEAAMAAAAAAAAAAAA=")
tile_set = ExtResource("6_s4l03")
script = ExtResource("7_ypncs")
metadata/_custom_type_script = "uid://cyg4kuvi2nlhe"

[node name="MapEdgeDisplay" parent="MapManager" instance=ExtResource("23_mswog")]

[node name="Player" parent="." instance=ExtResource("24_4mw86")]
unique_name_in_owner = true
position = Vector2(8, 8)

[connection signal="pressed" from="MiscCanvasLayer/Control/PauseScreen/VBoxContainer/ContinueButton" to="MiscCanvasLayer/Control/PauseScreen" method="_on_continue_button_pressed"]
[connection signal="pressed" from="MiscCanvasLayer/Control/PauseScreen/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MiscCanvasLayer/Control/PauseScreen/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="MiscCanvasLayer/Control/PauseButton" to="MiscCanvasLayer/Control/PauseScreen" method="_on_pause_button_pressed"]
[connection signal="load_next_level" from="MiscCanvasLayer/Control/WinDialog" to="." method="load_next_scene"]
[connection signal="about_to_move" from="Player" to="MapManager" method="_on_player_about_to_move"]
[connection signal="just_moved" from="Player" to="MapManager" method="_on_player_just_moved"]
